--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Projeto Books</h1>
+    <header>
+        <h1> Projeto Books </h1>
+
+        <nav> <ul>
+            <li><a href="Home"></a></li>
+            <a href=">Cadastrar"></a></ul>
+            
+            
+            
+            </nav>
+        
+        
+        
+        
+        </header>
+
 
     {{{body}}}
 </body>
